--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Google OAuth Callback</h1>
     <p>Google OAuth callback page.</p>
-    <a href="http://localhost:8080/auth/google">Google OAuth2.0</a>
-    <!-- <a href="https://supersquad.asia/auth/google">Google OAuth2.0</a> -->
+    <!-- <a href="http://localhost:8080/auth/google">Google OAuth2.0</a> -->
+    <a href="https://supersquad.asia/auth/google">Google OAuth2.0</a>
     <!-- <a
       href="http://ec2-52-65-222-108.ap-southeast-2.compute.amazonaws.com:8080/auth/google"
       >Google OAuth2.0</a
